--- a/better_forecast/templates/favourites.html
+++ b/better_forecast/templates/favourites.html
@@ -30,13 +30,14 @@
 
 	</script>
 <style>
+
     body {background: url(../static/background_images/activities.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover; color: white}
 </style>
 {#<div  ng-class="{'form-group has-success has-feedback': rainchoice4.length >= 3, 'form-group has-error has-feedback': myform.rainchoice4.$error.minlength#}
-<p style="color: #000000" id="submi">caca</p>
+
 {#{{ username }}#}
 {#   div has class="form-group has-success has-feedback" for good and span class="glyphicon glyphicon-ok form-control-feedback" for checkmark#}
 {#   div class="form-group has-warning has-feedback" for error and span class="glyphicon glyphicon-warning-sign form-control-feedback"#}
@@ -74,20 +75,20 @@
 <div class="row" style="margin-left: 10px; margin-right: 10px">
     <div ng-hide="rain" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(65, 105, 225, 0.95); margin-left: 37.5%">
             <div>
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="rainchoice2" ng-model="rainchoice2" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
     <div ng-show="sun" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(242, 166, 24, 0.95); margin-left: 37.5%">
             <div>
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="sunchoice2" ng-model="sunchoice2" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
 
     <div ng-show="snow" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(173, 216, 230,0.95); margin-left: 37.5%">
                     <div>
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="snowchoice2" ng-model="snowchoice2" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
@@ -95,19 +96,19 @@
 <div class="row" style="margin-left: 10px; margin-right: 10px">
     <div ng-hide="rain" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(65, 105, 225, 0.95); margin-left: 37.5%">
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="rainchoice3" ng-model="rainchoice3" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
     <div ng-show="sun" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(242, 166, 24, 0.95); margin-left: 37.5%">
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="sunchoice3" ng-model="sunchoice3" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
     <div ng-show="snow" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(173, 216, 230,0.95); margin-left: 37.5%">
                     <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
                       <input name="snowchoice3" ng-model="snowchoice3" type="text" class="form-control" id="inputSuccess2" required="required">
                     </div>
     </div>
@@ -116,20 +117,20 @@
     <div ng-hide="rain" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(65, 105, 225, 0.95); margin-left: 37.5%">
 
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="rainchoice4" ng-model="rainchoice4" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="rainchoice4" ng-model="rainchoice4" type="text" class="form-control" id="inputSuccess2">
                     </div>
     </div>
     <div ng-show="sun" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(242, 166, 24, 0.95); margin-left: 37.5%">
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="sunchoice4" ng-model="sunchoice4" ng-minlength="3" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="sunchoice4" ng-model="sunchoice4" ng-minlength="3" type="text" class="form-control" id="inputSuccess2">
                     </div>
     </div>
     <div ng-show="snow" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(173, 216, 230,0.95); margin-left: 37.5%">
                     <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="snowchoice4" ng-model="snowchoice4" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="snowchoice4" ng-model="snowchoice4" type="text" class="form-control" id="inputSuccess2">
                     </div>
     </div>
 
@@ -139,23 +140,23 @@
 
     <div ng-hide="rain" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(65, 105, 225, 0.95); padding-bottom: 20px; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; margin-left: 37.5%">
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="rainchoice5" ng-model="rainchoice5" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="rainchoice5" ng-model="rainchoice5" type="text" class="form-control" id="inputSuccess2">
                     </div>
-        <div style="text-align: center"><button style="color:rgb(65, 105, 225) " ng-click="submitterer()">Submit</button></div>
+        <div style="text-align: center"><button style="color:rgb(65, 105, 225) " ng-click="submitterer()">Submit this</button></div>
     </div>
 
     <div ng-show="sun" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(242, 166, 24, 0.95); padding-bottom: 20px; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; margin-left: 37.5%">
             <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="sunchoice5" ng-model="sunchoice5" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="sunchoice5" ng-model="sunchoice5" type="text" class="form-control" id="inputSuccess2">
                     </div>
         <div style="text-align: center"><button style="color:rgb(242, 166, 24) " ng-click="submitter()">Submit this</button></div>
     </div>
     <div ng-show="snow" class="col-sm-3 col-md-3 col-lg-3" style="background-color: rgba(173, 216, 230,0.95); padding-bottom: 50px; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; margin-left: 37.5%">
                     <div >
-                      <label class="control-label" for="inputSuccess2">Input with success</label>
-                      <input placeholder="not required" name="snowchoice5" ng-model="snowchoice5" type="text" class="form-control" id="inputSuccess2">
+                      <label style="visibility: hidden" class="control-label" for="inputSuccess2">jv</label>
+                      <input placeholder="Not required" name="snowchoice5" ng-model="snowchoice5" type="text" class="form-control" id="inputSuccess2">
                     </div>
     </div>
 </div>
