--- a/better_forecast/templates/registration/register.html
+++ b/better_forecast/templates/registration/register.html
@@ -4,44 +4,49 @@
 {% load staticfiles %}
 <style>
 
-        body {color: #000000;
+        body {
     background: url(../static/background_images/register.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;}
+    -o-background-size: cover;
+        color: white;}
     a:link {text-decoration: none}
     p {text-align: center}
+    .dp {color: black}
 </style>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-cookies.js"></script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reg.css' %}">
     <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/reg.js' %}"></script>
 
 {#<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>#}
 {#<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-cookies.js"></script>#}
-    <input ng-model="food">
+<br>
+<br>
 
-<p style="color: white">{{ password }}</p>
+
+<div style="text-align: center; background: linear-gradient(0deg, rgba(207, 207, 207, 0.01), rgba(227, 227, 227, 0.7), rgba(207, 207, 207, 0.01)); padding: 10px">
+    <h1>Create an Account</h1><br>
 <form method="post">
         {% csrf_token %}
         <p>Username</p>
-        <p>{{ form.username }}</p>
+         <p class="dp">{{ form.username }}</p>
         <p>Email</p>
-        <p>{{ form.email }}</p>
+         <p class="dp">{{ form.email }}</p>
         <p>State</p>
-        <p>{{ form.state }}</p>
+         <p class="dp">{{ form.state }}</p>
         <p>City</p>
-        <p>{{ form.city }}</p>
+         <p class="dp">{{ form.city }}</p>
         <p>Password</p>
-        <p>{{ form.password1 }}</p>
+         <p class="dp">{{ form.password1 }}</p>
         <p>Repeat Password</p>
-        <p ng-model="password">{{ form.password2 }}</p>
+         <p class="dp">{{ form.password2 }}</p>
 
         <p>Make a Choice  <a id="popoverData" class="btn" href="#" data-content="This field is where you decide whether you want to use the inbuilt activities which are completely random or input your own activities which will also be picked at random" rel="popover" data-placement="right" data-original-title="What's this" data-trigger="hover"><span style="font-size: 10px" id="what">Whats this?</span></a></p>
-        <p>{{ form.choice }}</p>
-        <input type="submit" value="Submit">
+        <p style="color: #000000">{{ form.choice }}</p>
+<button class="btn btn-warning" type="submit" value="Submit">Submit</button>
     </form>
-
+</div>
